# oxygine-after-effects

./: .gitignore
ae-movie/: CMakeLists.txt
ae-movie/include/movie/: movie.h  movie.hpp  movie_data.h  movie_instance.h  movie_resource.h  movie_skeleton.h  movie_type.h  movie_typedef.h
ae-movie/src/: movie_bezier.h  movie_data.c  movie_instance.c  movie_math.c  movie_math.h  movie_memory.h  movie_skeleton.c  movie_stream.h  movie_struct.h  movie_transformation.c  movie_transformation.h
examples/AE/Knight/: Knight.aep
examples/HelloViewerAE/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh
examples/HelloViewerAE/proj.cmake/: CMakeLists.txt  run.sh
examples/HelloViewerAE/proj.win32/: HelloViewerAE.sln  HelloViewerAE.vcxproj  HelloViewerAE.vcxproj.filters
examples/HelloViewerAE/src/: AEMovieWork.cpp  AEMovieWork.h  example.cpp  main.cpp
examples/exported/Knight/: res.xml
examples/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  build.gradle
examples/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
examples/proj.ios/HelloAE_ios.xcodeproj/: project.pbxproj
examples/proj.ios_mac/HelloAE.xcodeproj/: project.pbxproj
examples/proj.ios_mac/mac/: MainMenu.xib
examples/proj.win32/: HelloAE.sln  HelloAE.vcxproj
export/: ColorVertex.aex  ae_script.py  libMovieExport.jsx  multiexport.py  oxygine.py  postbuild.py  prebuild.py  preview.py  settings.py
export/scripts/: ae_movie_export_aem.py  ae_movie_export_image.py  ae_movie_export_sound.py  ae_movie_export_video.py  ae_movie_file_hash.py  ae_movie_image_polygonize.py  ae_movie_multiexport.py  ae_movie_polygon_triangulate.py  ae_movie_postbuild.py  ae_movie_prebuild.py  ae_movie_preview.py  ae_movie_settings.py
src/ae/: AEConf.h  AEMovie.cpp  AEMovie.h  AEMovieResource.cpp  AEMovieResource.h  AERenderer.cpp  AERenderer.h
(+18 files in other folders)
